examples/22-l7-routing/envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: orders
                      domains: ["*"]
                      routes:
                        # Header match takes priority over weighted split
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-route-to
                                string_match: { exact: "v2" }
                          route:
                            cluster: order_v2
                        # Default: weighted split 90/10
                        - match:
                            prefix: "/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: order_v1
                                  weight: 90
                                - name: order_v2
                                  weight: 10
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: order_v1
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: order_v1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: order-v1, port_value: 8080 }
    - name: order_v2
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: order_v2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: order-v2, port_value: 8080 }
